# latexcodec

./: .coveragerc  .editorconfig  .flake8  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  INSTALL.rst  LICENSE.rst  MANIFEST.in  README.rst  VERSION  mypy.ini  requirements.txt  setup.cfg  setup.py  table.txt  tox.ini
.github/workflows/: python-package.yml
doc/: Makefile  api.rst  codec.rst  conf.py  index.rst  lexer.rst  license.rst  make.bat  quickstart.rst
doc/api/: codec.rst  lexer.rst
latexcodec/: __init__.py  _new_latex_lexer.py  _new_lexer.py  codec.py  lexer.py  table.txt
test/: test_install_example.py  test_latex_codec.py  test_latex_lexer.py  test_new_latex_lexer.py  test_new_lexer.py
