[metadata]
name = latexcodec
author = Matthias C. M. Troffaes
author_email = matthias.troffaes@gmail.com
license = MIT
url = https://github.com/mcmtroffaes/latexcodec
download_url = http://pypi.python.org/pypi/latexcodec
description = A lexer and codec to work with LaTeX code in Python.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Text Processing :: Markup :: LaTeX
    Topic :: Text Processing :: Filters
platforms = any

[options]
platforms = any
packages = find:
zip_safe = True
install_requires = six>=1.4.1
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3

[bdist_wheel]
universal = 1

[nosetests]
with-coverage = 1
cover-package = latexcodec
cover-branches = 1
cover-html = 1

